--- a/css/categories.css
+++ b/css/categories.css
@@ -687,6 +687,12 @@
     }
 }
 
+@media only screen and (max-width:425px){
+    .banner {
+        height: 200px;
+    }
+}
+
 @media only screen and (max-width:375px){
     .banner .wrapper h1 {
         font-size: 16px;
